@@ -1,5 +1,5 @@
 /*
- *  $Id: server.h,v 1.5 2008/10/14 11:05:48 schmirl Exp $
+ *  $Id: server.h,v 1.6 2008/10/22 11:59:32 schmirl Exp $
  */
  
 #ifndef VDR_STREAMDEV_SERVER_H
@@ -18,8 +18,6 @@ extern char *opt_remux;
 
 class cStreamdevServer: public cThread {
 private:
-	bool m_Active;
-
 	static cStreamdevServer         *m_Instance;
 	static cList<cServerComponent>   m_Servers;
 	static cList<cServerConnection>  m_Clients;
