@@ -1,6 +1,8 @@
 VDR Plugin 'streamdev' Revision History
 ---------------------------------------
 
+- use cThread::Running()/Active() instead of private members (thanks to
+  Rolf Ahrenberg)
 - fixed output format of some debug messages (thanks to Rolf Ahrenberg)
 - added HTTP authentication
 - compatibility for VDR 1.7.1 (thanks to Udo Richter)
